# RollerCoasterGL

./: .clang-format  .clang-tidy  .gitignore  AppContext.hpp  Array_2D.hpp  CMakeLists.txt  DrawableMixin.hpp  FreeFlyCam.cpp  FreeFlyCam.hpp  LICENSE  README.md  SaveHeightmap.cpp  SaveHeightmap.hpp  SimplexNoise.cpp  SimplexNoise.hpp  Spline.cpp  Spline.hpp  Terrain.cpp  Terrain.hpp  Track.cpp  Track.hpp  TrackSegment.cpp  TrackSegment.hpp  main.cpp  manual.txt
assets/shaders/: car.frag  skybox.frag  skybox.vert  terrain.frag  terrain.vert  track.frag  track.vert
docs/: README.md
shaders/: terrain.frag  terrain.vert
src/camera/: FreeFlyCam.cpp  FreeFlyCam.hpp
src/common/: TrackTypes.hpp
src/core/: AppContext.hpp  main.cpp
src/gameplay/: Car.cpp  Car.hpp  TrackComponent.cpp  TrackComponent.hpp
src/gfx/geometry/: RailGeometryBuilder.cpp  RailGeometryBuilder.hpp  SupportGeometryBuilder.cpp  SupportGeometryBuilder.hpp
src/gfx/render/: DrawableMixin.hpp  Mesh.hpp  Texture.cpp  Texture.hpp  Track.cpp  Track.hpp
src/math/: Array_2D.hpp  Spline.cpp  Spline.hpp
src/physics/: FrameCursor.cpp  FrameCursor.hpp  PTF.cpp  PTF.hpp  PTFBuilder.cpp  PTFBuilder.hpp  PathSampler.cpp  PathSampler.hpp
src/terrain/: SaveHeightmap.cpp  SaveHeightmap.hpp  SimplexNoise.cpp  SimplexNoise.hpp  Terrain.cpp  Terrain.hpp
src/track/: Track.cpp  Track.hpp
